--- a/src/webinterface/templates/layout.html
+++ b/src/webinterface/templates/layout.html
@@ -15,18 +15,17 @@
 	{% block header %}{% endblock %}
 </head>
 <body>
-    <div id="navbar">
-        <h1>UKBOt @ Labs</h1>
-	<ul>
-		<a href="/ukbot/">Oversikt</a>
-        </ul>
-    </div>
     <!--
     <p style="background:#ffffaa; padding:10px;margin:10px;">
         <em>Verktøyet er under utvikling. Resultatlisten oppdateres foreløpig med ujevne mellomrom. Miniatyrbilder vises ikke for alle bilder enda.</em>
-	</p>-->
+        </p>-->
+        <div class="container">
+            <h1>
+                <a href="/ukbot/">UKBOt</a>
+                @ Labs
+            </h1>
 {% block body %}{% endblock %}
-
+</div>
 <div id="footer">
     A tool by <a href="//no.wikipedia.org/wiki/Bruker:Danmichaelo">Danmichaelo</a>. 
     <a href="https://github.com/danmichaelo/UKBot">Open source</a> 
