--- a/src/webinterface/templates/main.html
+++ b/src/webinterface/templates/main.html
@@ -3,28 +3,25 @@
 {% block title %}Hello{% endblock %}
 {% block body %}
 
-<div style="border:3px solid orange;padding:20px;margin:20px;">
-	UKBot er under oppgradering og kan være nede i kortere perioder
-</div>
-
-  <div style="padding:20px; font-size: 140%;">
-	<a href="./no/">Ukens konkurranse</a>: {{ status_no }}
-    <img src="/ukbot/plots/no.mem.png" style="width:400px;" />
-  </div>
-  <div style="padding:20px; font-size: 140%;">
-	<a href="./fi/">Viikon kilpailu</a>: {{ status_fi }}
-    <img src="/ukbot/plots/fi.mem.png" style="width:400px;" />
-</div>
-  <div style="padding:20px; font-size: 140%;">
-	Elokuun kuvitustalkoot: {{ status_fi_ek }}
-    <img src="/ukbot/plots/Fiwp%20Elokuun%20kuvitustalkoot%202013.svg" />
-    <img src="/ukbot/plots/fi-ek.mem.png" style="width:400px;" />
-</div>
+<section style="clear:both;">
+  <img src="/ukbot/plots/no.mem.png" style="width:400px; float:right;">
+  <h2>
+      <a href="./no/">Ukens konkurranse</a>
+  </h2>
+  {{ status_no }}
+</section>
+  
+<section style="clear:both;">
+  <img src="/ukbot/plots/fi.mem.png" style="width:400px; float:right;">
+  <h2>
+      <a href="./fi/">Viikon kilpailu</a>
+  </h2>
+  {{ status_fi }}
+</section>
 
 
-<div id="chart_fi-hl">
-  <svg style='height:500px'> </svg>
-</div>
+<div style="clear:both;"></div>
+
 
 <script type="text/javascript">
 
