Add web interface for testing word counts

--- a/src/webinterface/templates/main.html
+++ b/src/webinterface/templates/main.html
@@ -3,6 +3,11 @@
 {% block title %}Hello{% endblock %}
 {% block body %}
 
+<p>
+    Wonder how ukbot counts words? 
+    <a href="/ukbot/wordcount">Test it here</a>
+</p>
+
 <section style="clear:both;">
   <img src="/ukbot/plots/no.mem.png" style="width:400px; float:right;">
   <h2>
