--- a/src/webinterface/templates/layout.html
+++ b/src/webinterface/templates/layout.html
@@ -21,8 +21,8 @@
         </p>-->
         <div class="container">
             <h1>
-                <a href="/ukbot/">UKBOt</a>
-                @ Labs
+                <a href="/ukbot/">UKB</a>
+                @ Toolforge
             </h1>
 {% block body %}{% endblock %}
 </div>
