--- a/src/webinterface/templates/layout.html
+++ b/src/webinterface/templates/layout.html
@@ -18,7 +18,7 @@
 <body>
     <div class="container">
         <h1>
-            <a href="/">UKB</a>
+            <a href="./">UKB</a>
             @ Toolforge
         </h1>
 
