--- a/src/webinterface/templates/status.html
+++ b/src/webinterface/templates/status.html
@@ -8,24 +8,17 @@
 
 <script>
 
-var baseHref = document.getElementsByTagName('base')[0].href.replace(/https?:/, 'ws:');
+var baseHref = document.getElementsByTagName('base')[0].href.replace(/https?:/, 'wss:');
 var contest = "{{contest}}";
 
 var socket = new WebSocket(baseHref + contest + "/status.sock");
 socket.onopen = function(){
     console.log("Socket has been opened!");
-    socket.send('Hello');
-    // setInterval(function() {
-    //     socket.send('ping');
-    // }, 1000);
-
 }
 socket.onmessage = function(msg){
     $('#run_log').text( $('#run_log').text() + msg.data);
     console.log(msg); //Awesome!
 }
-
-
 </script>
 
 {% endblock %}
