Webinterface: fix contest links

--- a/ukbot/webinterface/templates/main.html
+++ b/ukbot/webinterface/templates/main.html
@@ -13,7 +13,7 @@
 <section style="clear:both;">
   <img src="static/plots/{{ conf.id }}.mem.png" style="width:400px; float:right;">
   <h2>
-      <a href="{{ conf.url }}/">{{ conf.name }}</a>
+      <a href="{{ conf.url }}">{{ conf.name }}</a>
   </h2>
   <a href="./{{ conf.id }}/status">{{ conf.status | safe }}</a>
 </section>
