--- a/ukbot/webinterface/static/site.css
+++ b/ukbot/webinterface/static/site.css
@@ -1,80 +1,61 @@
-body {
-    color:#222;
-    padding: 0px;
-    margin: 0px;
-    font-family: sans-serif;
-    font-size:12px;
-}
 tt {
     background: #fefefe;
 }
 
-div#navbar {
-    background: #ffffcc;
-    padding:20px 20px 20px 20px;
-    border-bottom: 1px solid black;
-    margin: 0px 0px 10px 0px;
-}
-h1 {
-    margin: 20px 0px;
-    font-size:34px;
-    font-weight: bold;
-    text-align: center;
-    color: #888;
-}
-div#navbar ul {
-    margin: 0px;
-    padding-left: 0px;
-    white-space: nowrap;
-   border-bottom: 1px solid #000;
-}
-div#navbar ul {
-    margin: 0px;
-    padding-left: 0px;
-    white-space: nowrap;
-   border-bottom: 1px solid #000;
-}
-
-#navbar ul, #navbar li {
-margin: 0;
-padding: 0;
-display: inline;
-list-style-type: none;
-}
-#navbar a, #navbar span {
-    float: left;
-    line-height: 14px;
-font-weight: bold;
-margin: 0 10px 4px 10px;
-text-decoration: none;
-color: #999;
-}
-
-#navbar a:link, #navbar a:visited {
-    color: #999;
-    text-decoration: none;
-}
-
-#navbar span.active {
-border-bottom: 4px solid #000;
-padding-bottom: 2px;
-background: transparent;
-color: #000;
-}
-
 table {
-    font-size:100%;
-    width: 100%;
+  font-size: 80%;
+  width: 100%;
 }
-tr td:first-child { max-width: 400px; }
 
-#footer {
-    color: gray;
-    font-size: 10px;
-    margin-top: 3em;
-    text-align: center;
-    background-color: 
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
 }
-.container {
-    padding: 1em 3em;
+body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
+/* Spinner
+-------------------------------------------------- */
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #fff;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 28px;
+    left: 28px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: -1px;
+    left: -1px;
+    width: 58px;
+    height: 58px;
+    opacity: 0;
+  }
 }
