--- a/ukbot/webinterface/templates/layout.html
+++ b/ukbot/webinterface/templates/layout.html
@@ -5,31 +5,56 @@
 	<meta charset="utf-8" />
     <base href="{{ base_href }}">
 	<title>{% block title %}{% endblock %} | UKBot</title>
-	<!--
-    <script type="text/javascript" src="assets/novus-nvd3-683eb18/lib/d3.v2.min.js"></script>
-    -->
-    <link rel="stylesheet" href="static/site.css" />
-    <link rel="stylesheet" href="static/assets/nv.d3.css" />
-    <script src="static/assets/d3.v3.min.js"></script>
-    <script src="static/assets/nv.d3.js"></script>
-    <script src="static/assets/jquery-1.10.2.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/ukbot/static/site.css">
+    <link rel="stylesheet" href="/ukbot/static/assets/nv.d3.css">
+    <script src="/ukbot/static/assets/d3.v3.min.js"></script>
+    <script src="/ukbot/static/assets/nv.d3.js"></script>
+    <script src="/ukbot/static/assets/jquery-1.10.2.min.js"></script>
+    <script src="https://tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
 	{% block header %}{% endblock %}
 </head>
 <body>
-    <div class="container">
-        <h1>
-            <a href="./">UKB</a>
-            @ Toolforge
-        </h1>
 
-        {% block body %}{% endblock %}
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/ukbot/">
+      UKBot
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+{% set navigation_bar = [
+    ('/ukbot/', 'home', 'Status'),
+    ('/ukbot/contests', 'contests', 'Contests'),
+    ('/ukbot/wordcount', 'wordcount', 'Word count test')
+] -%}
+{% set active_page = active_page|default('index') -%}
+      <div class="navbar-nav mr-auto">
+        {% for href, id, caption in navigation_bar %}
+            <a class="nav-item nav-link{% if id == active_page %} active{% endif %}"
+                href="{{ href|e }}">{{ caption|e }}</a>
+        {% endfor %}
+      </div>
+      <span class="navbar-text">
+        {{ current_time.strftime('%F %T') }}
+      </span>
     </div>
+  </nav>
 
-    <div id="footer">
+  <main role="main" class="container" style="margin-top:2em;">
+    {% block body %}{% endblock %}
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <span class="text-muted">
         A tool by <a href="//no.wikipedia.org/wiki/Bruker:Danmichaelo">Danmichaelo</a>.
         <a href="https://github.com/danmichaelo/UKBot">Open source</a>
         (<a href="http://opensource.org/licenses/MIT">MIT license</a>).
+      </span>
     </div>
+  </footer>
 
 </body>
 </html>
