--- a/ukbot/webinterface/templates/wordcount.html
+++ b/ukbot/webinterface/templates/wordcount.html
@@ -1,9 +1,9 @@
 {# -*- coding: utf-8; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4 #}
 {% extends "layout.html" %}
+{% set active_page = "wordcount" %}
 {% block title %}Ukens konkurranse{% endblock %}
 {% block body %}
 
-<h2>Test text extraction / word counting</h2>
 
 <form method="GET" action="/ukbot/wordcount">
 
