--- a/ukbot/webinterface/templates/status.html
+++ b/ukbot/webinterface/templates/status.html
@@ -31,7 +31,7 @@
 
 <script>
 
-var baseHref = document.getElementsByTagName('base')[0].href.replace(/https?:/, 'wss:');
+var baseHref = 'wss://tools.wmflabs.org/ukbot/';
 var jobId = "{{job_id}}";
 var socketUrl = baseHref + 'jobs/' + jobId + '/sock';
 console.log('Socket URL: ' + socketUrl);
