--- a/ukbot/webinterface/templates/404.html
+++ b/ukbot/webinterface/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block title %}Page Not Found{% endblock %}
 {% block body %}
-  <h2>Page Not Found</h2>
-  <p>I am sorry, but no such page was found here.
+    <h2>404 Page Not Found</h2>
+    <p>UKBot did not find that page.</p>
 {% endblock %}
