--- a/ukbot/webinterface/templates/status.html
+++ b/ukbot/webinterface/templates/status.html
@@ -31,7 +31,7 @@
 
 <script>
 
-var baseHref = 'wss://tools.wmflabs.org/ukbot/';
+var baseHref = 'wss://ukbot.toolforge.org/';
 var jobId = "{{job_id}}";
 var socketUrl = baseHref + 'jobs/' + jobId + '/sock';
 console.log('Socket URL: ' + socketUrl);
