Make websocket work with localhost

--- a/ukbot/webinterface/templates/status.html
+++ b/ukbot/webinterface/templates/status.html
@@ -31,7 +31,8 @@
 
 <script>
 
-var baseHref = 'wss://ukbot.toolforge.org/';
+var host = window.location.host;
+var baseHref = `wss://${host}/`;
 var jobId = "{{job_id}}";
 var socketUrl = baseHref + 'jobs/' + jobId + '/sock';
 console.log('Socket URL: ' + socketUrl);
